# virolution

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.rs  flake.nix
.github/workflows/: tests.yml
data/: hiv.yaml  hiv_generated.fasta  multihost.yaml  phix174.fasta  plan.csv  settings.yaml  singlehost.yaml
examples/: compartments.rs  haplotype.rs  simulation.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: ancestry.rs  args.rs  barcode.rs  encoding.rs  errors.rs  fitness.rs  haplotype.rs  historian.rs  lib.rs  main.rs  plan.rs  population.rs  runner.rs  sample_writer.rs  simulation.rs  simulation_parameters.rs  simulation_plan.rs  simulation_settings.rs  transfers.rs
src/config/: mod.rs  parameters.rs  schedule.rs  settings.rs
src/core/: ancestry.rs  attributes.rs  cache.rs  fitness.rs  haplotype.rs  historian.rs  hosts.rs  mod.rs  population.rs
src/core/fitness/: epistasis.rs  init.rs  mod.rs  provider.rs  table.rs  utility.rs
src/init/: fitness.rs  mod.rs
src/providers/: fitness.rs  generation.rs  mod.rs
src/python/: mod.rs
src/readwrite/: haplotype.rs  mod.rs  population.rs  sample_writer.rs
src/references/: cell.rs  desc.rs  mod.rs  sync.rs
src/stats/: mod.rs  population.rs
tests/: benchmark.sh
tests/epistasis/: epistasis.yaml  epistasis_table.npy  fitness_table.npy
tests/multihost/: fitness_table_0.npy  fitness_table_1.npy  make_tables.py  multihost.yaml  multihost_from_files.yaml
tests/singlehost/: singlehost.yaml
