[package]
name = "virolution"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "virolution"
path = "src/main.rs"

[lib]
name = "virolution"
path = "src/lib.rs"

[profile.release]
debug = true

[workspace]

[dependencies]
block-id = "0.1.2"
clap = { version = "4.3.11", features = ["derive"] }
csv = "1.2.2"
derivative = "2.2.0"
derive_more = "0.99.17"
evalexpr = "8.2.0"
indicatif = "0.17.5"
itertools = "0.10.5"
log = "0.4.19"
npyz = "0.7.4"
parking_lot = "0.12.1"
phf = { version = "0.11.2", features = ["macros"] }
rand = { version = "0.8.5", features = ["alloc"] }
rand_distr = "0.4.3"
serde = { version = "1.0.171", features = ["derive"] }
serde_yaml = "0.9.22"
seq_io = "0.3.1"
simple-logging = "2.0.2"
rayon = { version = "1.7.0", optional = true }

[build-dependencies]
clap = { version = "4.3.11", features = ["derive"] }
clap_complete = "4.3.2"

[dev-dependencies]
serial_test = "0.9.0"

[features]
default = []
parallel = ["rayon"]
