[package]
name = "virolution"
version = "0.4.0"
edition = "2021"
build = "build.rs"
description = "Agent-Based Simulation of Viral Evolution powered by a Sparse Haplotype Representation"
authors = ["nicolas ochsner <nicos.letters@gmail.com>"]
keywords = ["simulation", "ecology", "virus-evolution"]
repository = "https://github.com/sirno/virolution"
license = "MIT"

[[bin]]
name = "virolution"
path = "src/main.rs"

[lib]
name = "virolution"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[workspace]
members = ["macros"]

[dependencies]
anyhow = "1.0"
block-id = "0.2.1"
cached = "0.54.0"
clap = { version = "4.3.11", features = ["derive"] }
csv = "1.2.2"
dashmap = { version = "6.1.0", optional = true }
derivative = "2.2.0"
derive_more = { version = "2.0.1", features = ["full"] }
derive-where = "1.2.7"
evalexpr = "12.0.1"
indicatif = "0.17.5"
itertools = "0.14.0"
log = "0.4.19"
npyz = { version = "0.8.3", features = ["derive"] }
parking_lot = "0.12.1"
phf = { version = "0.11.2", features = ["macros"] }
rand = { version = "0.9.0", features = ["alloc"] }
rand_distr = "0.5.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_yaml = "0.9.22"
seq_io = "0.3.1"
simple-logging = "2.0.2"
smallvec = "1.13.2"
rayon = { version = "1.7.0", optional = true }
virolution-macros = { version = "0.1.0", path = "macros" }

[build-dependencies]
clap = { version = "4.3.11", features = ["derive"] }
clap_complete = "4.3.2"

[dev-dependencies]
serial_test = "3.2.0"

[features]
default = []
parallel = ["rayon", "dashmap"]
