[package]
name = "virolution-macros"
version = "0.1.0"
edition = "2024"
description = "Proc macros for virolution."
authors = ["nicolas ochsner <nicos.letters@gmail.com>"]
repository = "https://github.com/sirno/virolution"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
